...
      AppleReminderEditorView()
        .environmentObject(store)
    }
    .defaultSize(width: 580, height: 540)
    .handlesExternalEvents(matching: [])

    Window("New Apple Calendar Event", id: "appleCalendarEventCreator") {
      AppleCalendarEventEditorView()
        .environmentObject(store)
    }
    .defaultSize(width: 560, height: 440)
    .handlesExternalEvents(matching: [])

...
